# TeXLexer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  texToMML.cpp
src/: Lexer.cpp  Lexer.h  LexerImpl.l  Token.h  TokenType.h
src/mml/: MathMLGenerator.cpp  MathMLGenerator.h
test/: CMakeLists.txt  LexerTestSuite.cpp  MathMLGeneratorTestSuite.cpp.in
test/files/: binom.tex  binom.xml  displaystyle.tex  displaystyle.xml  env_array.tex  env_array.xml  env_array_cdots.tex  env_array_cdots.xml  env_matrix.tex  env_matrix.xml  env_pmatrix.tex  env_pmatrix.xml  frac.tex  frac.xml  genfrac.tex  genfrac.xml  geq.tex  geq.xml  hspace.tex  hspace.xml  int.tex  int.xml  int_limits.tex  int_limits.xml  left_empty_right.tex  left_empty_right.xml  left_right.tex  left_right.xml  left_right_sup.tex  left_right_sup.xml  left_right_with_dot.tex  left_right_with_dot.xml  lim.tex  lim.xml  limits.tex  limits.xml  mathbb.tex  mathbb.xml  mbox.tex  mbox.xml  (+42 more)
